// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches snapshot 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "none",
    }
  }
>
  Example Text
</div>
`;

exports[`Text matches snapshot with different fontSize 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "fontFamily": "Roboto",
      "fontSize": "20px",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "none",
    }
  }
>
  Example Text
</div>
`;

exports[`Text matches snapshot with different textAlign 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "color": "rgba(255,0,0,1.00)",
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "right",
      "textDecoration": "none",
      "textTransform": "none",
    }
  }
>
  Example Text
</div>
`;

exports[`Text matches snapshot with string color 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "color": "rgba(255,0,0,1.00)",
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "none",
    }
  }
>
  Example Text
</div>
`;

exports[`Text matches snapshot with theme defined color 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "color": "rgba(98,0,238,1.00)",
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "none",
    }
  }
>
  Example Text
</div>
`;
